[package]
name = "poke-a-mango"
description = "Display images in your terminal, kind of"
documentation = "https://cdn.rawgit.com/nabijaczleweli/poke-a-mango/doc/poke_a_mango/index.html"
repository = "https://github.com/nabijaczleweli/poke-a-mango"
readme = "README.md"
keywords = ["pokemon", "game", "sfml", "meme"]
license = "MIT"
# Remember to also update in appveyor.yml
version = "0.1.0"
# Remember to also update in poke-a-mango.md
authors = ["nabijaczleweli <nabijaczleweli@gmail.com>"]
exclude = ["*.enc"]


[dependencies]
rustc-serialize = "0.3"
piston_window = "0.53"
lazy_static = "0.2"
conrod = "0.44"
glutin = "0.6"
regex = "0.1"
clap = "2.13"
toml = "0.2"

[dependencies.chrono]
version = "0.2"
features = ["rustc-serialize"]


[[bin]]
name = "poke-a-mango"
test = false
doc = false
